<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/acct__form_fields_vertical_margin"
    android:paddingLeft="@dimen/acct__form_fields_horizontal_margin"
    android:paddingRight="@dimen/acct__form_fields_horizontal_margin"
    android:paddingTop="@dimen/acct__form_fields_vertical_margin">

    <com.expedia.account.input.ErrorableInputTextPresenter
        android:id="@+id/first_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/acct__Create_Password"
        android:inputType="textPassword"
        app:acct__eit_errorStringPassword="@string/acct__Password_length_error_message" />

    <com.expedia.account.input.ErrorableInputTextPresenter
        android:id="@+id/second_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/acct__Confirm_Password"
        android:inputType="textPassword"
        app:acct__eit_errorString="@string/acct__Passwords_must_match" />

    <android.support.v4.widget.Space
        android:id="@+id/password_bottom_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/acct__email_name_bottom_gap" />

</LinearLayout>