...
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/terms_of_use_checkbox"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:focusable="false"/>

...
            tools:text="Please send me spam and whatnot."
            android:importantForAccessibility="no"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_create_account"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/acct__sign_in_button_height"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/acct__Create_Account"
...
